@startuml diagrama

class Usuario {
    - nombre: string
    - puntuacionMaxima: int
    + GuardarPuntuacionMaxima(archivo: string)
    + CargarPuntuacionMaxima(archivo: string)
    + ConfigurarPuntuacionMaxima(p: int)
    + ConfigurarNombre(n: string)
    + ObtenerNombre(): string
    + ObtenerPuntuacionMaxima(): int
}

class Puntaje {
    - valor: int
    - maximo: int
    - fuente: sf::Font
    - texto: sf::Text
    + Aumentar(cantidad: int)
    + Disminuir(cantidad: int)
    + Reiniciar()
    + ObtenerValor(): int
    + ObtenerMaximo(): int
    + SetMaximo(m : int)
    + GuardarMaximo(archivo: string)
    + CargarMaximo(archivo: string)
    + Dibujar(window: sf::RenderWindow)
}

class JuegoCatCross {
    - personaje: Gatito
    - nivel: Nivel
    - nivelActual: int
    - intervaloObstaculo: float
    - ultimaFilaJugador: int
    - relojObstaculo: sf::Clock
    - puntaje: Puntaje
    - usuario: Usuario
    + IniciarJuego()
    + MostrarPantallaInicio()
}

class Gatito {
    - nombre: string
    - columna: int
    - fila: int
    - vida: int
    - textura: sf::Texture
    - sprite: sf::Sprite
    - actualFrame: int
    - numeroFrames: int
    - anchoFrame: int
    - altoFrame: int
    - relojAnimacion: sf::Clock
    - tiempoFrame: float
    - forma: sf::RectangleShape
    + MoverArriba()
    + MoverAbajo(filaMaxima: int)
    + MoverIzquierda()
    + MoverDerecha(columnaMaxima: int)
    + ObtenerColumna(): int
    + ObtenerFila(): int
    + ObtenerForma(): sf::RectangleShape&
    + ObtenerSprite(): sf::Sprite&
    + Reiniciar(columnaInicio: int, filaInicio: int)
    + PerderVida()
    + ActualizarAnimacion()
    + Dibujar(window: sf::RenderWindow)
}

class Nivel {
    - tema: string
    - obstaculos: Obstaculo[]
    - anchoCuadricula: int
    - altoCuadricula: int
    - velocidadesPorFila: float[]
    - temporizadoresPorFila: sf::Clock[]
    - filaConObstaculos: bool[]
    + GenerarObstaculos(fila: int, cantidad: int, direccion: int)
    + ActualizarObstaculos()
    + GenerarObstaculosAvanzado(nivel: int)
    + ActualizarObstaculosAvanzado()
    + ObtenerObstaculos(): Obstaculo[]
    + ObtenerAnchoCuadricula(): int
    + ObtenerAltoCuadricula(): int
}

class Sonido {
    - archivo: string
    - musica: sf::Music
    - cargado: bool
    + Cargar(archivo: const string&): bool
    + Reproducir(loop: bool = false)
    + Detener()
    + ObtenerEstadoReproduccion(): bool
}

class Obstaculo {
    - tipo: string
    - columna: int
    - fila: int 
    - direccion: int
    - largo: int
    - forma: sf::RectangleShape
    - activo: bool
    - sprite: sf::Sprite
    - texturaCargada: bool
    - static texturasCompartidas: map<int, sf::Texture>
    + Mover(maximaColumna: int)
    + Dibujar(window: sf::RenderWindow)
    + ObtenerColumna(): int
    + ObtenerFila(): int
    + ObtenerDireccion(): int
    + ObtenerLargo(): int
    + ObtenerForma(): sf::RectangleShape&
    + ObtenerSprite(): sf::Sprite&
    + ObtenerEstadoActivo(): bool
    + Destruir()
}

class Coleccionable {
    - tipo: string
    - posicionX: int
    - posicionY: int
    - textura: sf::Texture
    - sprite: sf::Sprite
    - recolectado: bool
    - valor: int
    + CargarTextura(rutaArchivo: const string&)
    + EstablecerPosicion(columna: int, fila: int, tamañoCelda: int)
    + Dibujar(ventana: sf::RenderWindow&)
    + Recolectar()
    + VerificarRecoleccion(): bool
    + ObtenerSprite(): sf::Sprite*
    + ObtenerValor(): int
    + ObtenerTipo(): string
    + ReaparecerAleatorio(columnaCuadricula: int, filaCuadricula: int, tamañoCelda: int, columnaProhibida: int, filaProhibida: int, obstaculos: const vector<pair<int, int>>&)
    + ColisionarConGatito( jugadorPosicionX: int, jugadorPosicionY: int, tamañoCelda: int): bool
}

JuegoCatCross *-- Gatito : tiene un
JuegoCatCross *-- Nivel : tiene un
main o-- Sonido : usa un
main o-- JuegoCatCross : usa un
Sonido -- JuegoCatCross
JuegoCatCross *-- Puntaje : tiene un
JuegoCatCross *-- Usuario : tiene un
Nivel "1" *-- "*" Obstaculo : tiene muchos
Nivel "1" *-- "2" Coleccionable : tiene 

@enduml